more fixes for old content

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5410,11 +5410,27 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_romanian_to_assyrian_minority:0 "Replace §Y£ww1_flag_ROM  Romanian Minority§! with §Y£ww1_flag_ASY  Assyrian Minority§!\nEffective change:\n[TUR_minority_local_factory_sabotage_down][TUR_minority_compliance_growth_down][TUR_minority_recruitable_population_down]"
  TUR_romanian_to_georgian_minority:0 "Replace §Y£ww1_flag_ROM  Romanian Minority§! with §Y£ww1_flag_GEO  Georgian Minority§!\nEffective change:\n[TUR_minority_local_factory_sabotage_down][TUR_minority_compliance_growth_down][TUR_minority_recruitable_population_down]"
  TUR_romanian_to_azerbaijani_minority:0 "Replace §Y£ww1_flag_ROM  Romanian Minority§! with §Y£ww1_flag_AZR  Azerbaijani Minority§!\nEffective change:\n[TUR_minority_local_factory_sabotage_down][TUR_minority_compliance_growth_down][TUR_minority_recruitable_population_down]"
-
+ 
+ TUR_appoint_provincial_governors:0 "Appoint Provincial Governors in [FROM.GetName]"
+ TUR_appoint_provincial_governors_desc:0 "Our empire relied on local compliance and regional rulers to govern its Arab lands. Yet this has caused a level of autonomy between these vilayets and Konstantiniyye. It's time to appoint our own governors just like any other contemporary power."
+ TUR_appoint_provincial_governors_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+5%§!\n\n"
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
  TUR_pro_ottoman_propaganda_for_shia_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
+ TUR_curb_foreign_influence:0 "Curb Foreign Influence"
+ TUR_curb_foreign_influence_desc:0 "Foreign influence in some parts of our Syrian vilayets have grown to a point that it's replacing our own government's influence. We must restrict foreign operations in these lands to increase our control over these lands."
+ TUR_curbing_our_influence_in_middle_east1:0 "Curbing Our Influence in Middle East"
+ TUR_curbing_our_influence_in_middle_east2:0 "Curbing Our Influence in Middle East"
+ TUR_curbing_our_influence_in_middle_east3:0 "Curbing Our Influence in Middle East"
+ TUR_improve_state_institutions:0 "Improve State Institutions"
+ TUR_improve_state_institutions_desc:0 "Our citizens in the Arab lands experience various hardships. As we improve the institutions in these vilayets, we'll centralize these lands and earn the trust of our people."
+ TUR_increase_aleppo_centralization_10:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+10%§!"
+ TUR_increase_damascus_centralization_10:0 "Modify §YCentralization§! of §YDamascus Vilayet§! by §G+10%§!"
+ TUR_increase_beirut_centralization_10:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+10%§!"
+ TUR_increase_deir_ez_zor_centralization_15:0 "Modify §YCentralization§! of §YBeirut Vilayet§! by §G+15%§!"
+ TUR_increase_baghdad_centralization_10:0 "Modify §YCentralization§! of §YBaghdad Vilayet§! by §G+10%§!"
+ TUR_increase_basra_centralization_10:0 "Modify §YCentralization§! of §YBasra Vilayet§! by §G+10%§!"
  TUR_tax_collection_in_middle_east:0 "Tax Collection in [FROM.GetName]"
  TUR_tax_collection_in_middle_east_desc:0 "Centuries of neglection has left tax collection in [FROM.GetName] rather inefficient. If we manage to bring modern means of transportation to the region, we can easily improve tax collection methods."
  TUR_increase_conscription_in_middle_east:0 "Increase Conscription in [FROM.GetName]"
