--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5416,8 +5416,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_appoint_provincial_governors_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£supply_texticon  Local Supplies: §G+5%§!\n\n"
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
- TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_pro_ottoman_propaganda_for_shia_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
+ TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
+ TUR_pro_ottoman_propaganda_for_shia_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
  TUR_curb_foreign_influence:0 "Curb Foreign Influence"
  TUR_curb_foreign_influence_desc:0 "Foreign influence in some parts of our Syrian vilayets have grown to a point that it's replacing our own government's influence. We must restrict foreign operations in these lands to increase our control over these lands."
  TUR_curbing_our_influence_in_middle_east1:0 "Curbing Our Influence in Middle East"
@@ -5448,27 +5448,27 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_ban_arab_newspapers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-10%§!\n"
  TUR_forced_labor_in_middle_east:0 "Forced Labor in [FROM.GetName]"
  TUR_forced_labor_in_middle_east_desc:0 "Lack of development and inefficient government power in [FROM.GetName] results in the region lacking in development. By forming force labor in the region, we can increase the development of the state."
- TUR_forced_labor_in_middle_east_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+2%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
+ TUR_forced_labor_in_middle_east_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+2%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
  TUR_recruit_prisoner_conscripts_in_middle_east:0 "Recruit Prisoner Conscripts in [FROM.GetName]"
  TUR_recruit_prisoner_conscripts_in_middle_east_desc:0 "Surpression of dissent in [FROM.GetName] has resulted in numerous Arab prisoners at our hands. Instead of wasting our precious recourses by imprisoning them, we can put them into use by forming penal battalions."
  TUR_has_surpression_point:0 "Has §YArab Surpression§! points\n"
  TUR_add_surpression_point:0 "§G+1§! §YArab Surpression§! point\n"
  TUR_remove_surpression_point:0 "§R-1§! §YArab Surpression§! point\n"
- TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
+ TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
  TUR_remove_forced_labor:0 "Remove Forced Labor"
  TUR_remove_forced_labor_desc:0 "Forced labor was not meant to be a permanent solution. Its implications on the state has resulted in widespread unpopularity in the region. It must be removed before it causes too much damage."
- TUR_remove_forced_labor_tt1:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_remove_forced_labor_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-4%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
- TUR_remove_forced_labor_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-6%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.30%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n"
- TUR_remove_forced_labor_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-8%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.40%§!\n£war_support_modifiericons_texticon  War Support: §G+0.40%§!\n"
- TUR_remove_forced_labor_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-10%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.50%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
+ TUR_remove_forced_labor_tt1:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
+ TUR_remove_forced_labor_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-4%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
+ TUR_remove_forced_labor_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-6%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.30%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n"
+ TUR_remove_forced_labor_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-8%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.40%§!\n£war_support_modifiericons_texticon  War Support: §G+0.40%§!\n"
+ TUR_remove_forced_labor_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-10%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.50%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
  TUR_disband_prisoner_conscripts:0 "Disband Prisoner Conscripts"
  TUR_disband_prisoner_conscripts_desc:0 "Prisoner Conscripts have proven to be greater of a burden that they're a benefit to us. The only logical action would be to disband them."
- TUR_disband_prisoner_conscripts_tt1:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_disband_prisoner_conscripts_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+2.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
- TUR_disband_prisoner_conscripts_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+3.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n"
- TUR_disband_prisoner_conscripts_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+4.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.40%§!\n"
- TUR_disband_prisoner_conscripts_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
+ TUR_disband_prisoner_conscripts_tt1:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
+ TUR_disband_prisoner_conscripts_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+2.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n"
+ TUR_disband_prisoner_conscripts_tt3:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+3.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n"
+ TUR_disband_prisoner_conscripts_tt4:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+4.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.40%§!\n"
+ TUR_disband_prisoner_conscripts_tt5:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.50%§!\n"
  TUR_nationalize_greek_businesses:0 "Nationalize Greek Businesses in [FROM.GetName]"
  TUR_nationalize_greek_businesses_desc:0 "Greeks and other Christians have held a monopoly over oue economy. By transferring their businesses to Muslim Turks, we can achieve a loyal and national bourgeoisie."
  TUR_nationalize_greek_businesses_tt:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n£civ_factory  Local Factories: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
@@ -5586,6 +5586,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_local_construction_speed_4:0 "£construction_speed_texticon  Local Construction Speed: §G+3%§!\n"
  TUR_minority_local_construction_speed_5:0 "£construction_speed_texticon  Local Construction Speed: §G+2%§!\n"
  TUR_minority_local_construction_speed_6:0 "£construction_speed_texticon  Local Construction Speed: §G+1%§!\n"
+
+ TUR_minority_non_core_manpower_albanian_down:0 "[TUR_minority_non_core_manpower_albanian_down]"
+ TUR_minority_non_core_manpower_normal:0 "£manpower_noncore_texticon  Non-core Manpower: §G+5.00%§!\n"
+ TUR_minority_non_core_manpower_4_5:0 "£manpower_noncore_texticon  Non-core Manpower: §G+4.50%§!\n"
+ TUR_minority_non_core_manpower_4:0 "£manpower_noncore_texticon  Non-core Manpower: §G+4.00%§!\n"
+ TUR_minority_non_core_manpower_3_5:0 "£manpower_noncore_texticon  Non-core Manpower: §G+3.50%§!\n"
+ TUR_minority_non_core_manpower_3:0 "£manpower_noncore_texticon  Non-core Manpower: §G+3.00%§!\n"
+ TUR_minority_non_core_manpower_2_5:0 "£manpower_noncore_texticon  Non-core Manpower: §G+2.50%§!\n"
+ TUR_minority_non_core_manpower_2:0 "£manpower_noncore_texticon  Non-core Manpower: §G+2.00%§!\n"
+ TUR_minority_non_core_manpower_1_5:0 "£manpower_noncore_texticon  Non-core Manpower: §G+1.50%§!\n"
+ TUR_minority_non_core_manpower_1:0 "£manpower_noncore_texticon  Non-core Manpower: §G+1.00%§!\n"
+ TUR_minority_non_core_manpower_0_5:0 "£manpower_noncore_texticon  Non-core Manpower: §G+0.50%§!\n"
 
  TUR_minority_local_supplies_for_controller_down:0 "[TUR_minority_local_supplies_for_controller_down]"
  TUR_minority_local_supplies_for_controller_down_2:0 "[TUR_minority_local_supplies_for_controller_down_2]"
@@ -5781,7 +5793,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_raise_bedouin_volunteers_desc:0 "As we've already secured support from the Bedouins, we can expand our support in other states."
  TUR_disband_bedouin_volunteers:0 "Disband Bedouin Volunteers"
  TUR_disband_bedouin_volunteers_desc:0 "Though we've previously alligned with the Bedouin volunteers, they pose a threat to the centralization of our state. Since they're no longer of use to us, we can disband them and revoke their privilages."
- TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n"
+ TUR_disband_bedouin_volunteers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n£ww1_flag_ARB  §YGreek Minority§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n"
  TUR_boost_egyptian_opposition:0 "Boost Egyptian Opposition"
  TUR_boost_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
  TUR_contact_with_the_national_party:0 "Contact with the National Party"
