fixed the ottoman focustree

--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -245,6 +245,7 @@
  statesman_of_europe:0 "Statesman of Europe"
  dud_murra:0 "Dud Murra"
  dud_murra_desc:0 "The Lion of Murra"
+ tgwr_caliph_idea:0 "Caliph"
  tgwr_caliph:0 "Caliph"
  tgwr_caliph_better:0 "Caliph"
  abdulhamid_absolute_monarchy:0 "Absolute Monarch"
