--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1101,7 +1101,7 @@
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
- TUR_sultan_mehmed_v:0 "Sultan Mehmed V"
+ TUR_fatherly_figure:0 "Fatherly Figure"
  TUR_sultan_mehmed_vi:0 "Sultan Mehmed VI"
  TUR_sultan_abdulmecid_ii:0 "Abdülmecid II"
  tur_placated_administration:0 "Placated Administration"
