--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4990,7 +4990,7 @@ ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
 ROM_restore_christianity_to_romania_desc:0 ""
-ROM_blurry_the_lines_between_church_and_state:0 "Dismantle the Secular State"
+ROM_blurry_the_lines_between_church_and_state:0 "Blur the Lines Between Church and State"
 ROM_blurry_the_lines_between_church_and_state_desc:0 ""
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
@@ -5005,6 +5005,7 @@ ROM_enpower_the_elites_desc:0 ""
 ROM_enpower_the_elites.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
+ROM_the_third_force:0 "The Third Force"
 ROM_further_land_reform:0 "Tackling the Land Reform Issue"
 arm_twister:0 "Arm Twister"
 ROM_the_workers_party:0 "The Workers Party"
@@ -5068,6 +5069,10 @@ ROM_tax_cuts_for_the_poor_desc:0 "One of the biggest campaign promises of both t
 ROM_overturn_the_blue_law:0 "Overturn the Blue Law"
 ROM_overturn_the_blue_law_desc:0 "Seperation of church and state is one of the most important principles of the Romanian constitution. The blue law, banning shopping on sundays, is mostly inspired by Christs teachings. While Christains are free to follow this principle, it shouldn't be forced on everyone."
 pcd_leader:0 "Leader of the §mPCD§!"
+pcd_leader2:0 "Leader of the §mPCD§!"
+ROM_a_voice_of_reason:0 "A Voice of Reason"
+ROM_the_new_constitution:0 "The Tide of Progress"
+ROM_the_house_always_wins:0 "The House Always Wins"
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
 ROM_social_conservative_principal:0 "Social Conservative Principal"
