--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2903,7 +2903,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_konstantiniyye_vilayet_tt_blocked:0 "§YKonstantiniyye Vilayet§![ottoman_konstantiniyye_vilayet_centralization][ottoman_konstantiniyye_vilayet_separatist_sentiments]"
  ottoman_konstantiniyye_vilayet_centralization_yes:0 "\nCentralization: [?TUR_konstantiniyye_centralization|Y0%]"
  ottoman_konstantiniyye_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_konstantiniyye_centralization|Y0%][ottoman_konstantiniyye_vilayet_centralization_value]"
- ottoman_konstantiniyye_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_konstantiniyye_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_konstantiniyye_vc_effect|+%]"
+ ottoman_konstantiniyye_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_konstantiniyye_vc_effect|+%]\n£political_violence_texticon  Resistance Target: [?TUR_konstantiniyye_vc_effect_minus|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_konstantiniyye_vc_effect|+%]"
  ottoman_konstantiniyye_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_konstantiniyye_vilayet_stability_factor][ottoman_konstantiniyye_vilayet_war_support_factor][ottoman_konstantiniyye_vilayet_political_power_factor]"
  ottoman_konstantiniyye_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_konstantiniyye_vilayet_stability_factor][ottoman_konstantiniyye_vilayet_war_support_factor][ottoman_konstantiniyye_vilayet_political_power_factor][ottoman_konstantiniyye_vilayet_347]"
  ottoman_konstantiniyye_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_konstantiniyye_stability_factor|=2%+]"
@@ -3017,7 +3017,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_iskodra_vilayet_tt_blocked:0 "§Yİskodra Vilayet§![ottoman_iskodra_vilayet_centralization][ottoman_iskodra_vilayet_separatist_sentiments]"
  ottoman_iskodra_vilayet_centralization_yes:0 "\nCentralization: [?TUR_iskodra_centralization|Y0%]"
  ottoman_iskodra_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_iskodra_centralization|Y0%][ottoman_iskodra_vilayet_centralization_value]"
- ottoman_iskodra_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_iskodra_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_iskodra_vc_effect|+%]"
+ ottoman_iskodra_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_iskodra_vc_effect|+%]\n£political_violence_texticon  Resistance Target: [?TUR_iskodra_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_iskodra_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_iskodra_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_iskodra_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_iskodra_vc_effect|+%]"
  ottoman_iskodra_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_iskodra_vilayet_stability_factor][ottoman_iskodra_vilayet_war_support_factor][ottoman_iskodra_vilayet_political_power_factor]"
  ottoman_iskodra_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_iskodra_vilayet_stability_factor][ottoman_iskodra_vilayet_war_support_factor][ottoman_iskodra_vilayet_political_power_factor][ottoman_iskodra_vilayet_870][ottoman_iskodra_vilayet_44]"
  ottoman_iskodra_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_iskodra_stability_factor|=2%+]"
@@ -3351,7 +3351,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_aydin_vilayet:0 "Aydın Vilayet"
  TUR_aydin_vilayet_desc:0 "[TUR_aydin_vilayet_desc]"
  TUR_aydin_vilayet_desc_yes:0 "§W[ottoman_aydin_vilayet_centralization_desc][ottoman_aydin_vilayet_separatist_sentiments_desc]§!"
- ottoman_aydin_vilayet_tt_blocked:0 "§YAydin Vilayet§![ottoman_aydin_vilayet_centralization][ottoman_aydin_vilayet_separatist_sentiments]"
+ ottoman_aydin_vilayet_tt_blocked:0 "§YAydın Vilayet§![ottoman_aydin_vilayet_centralization][ottoman_aydin_vilayet_separatist_sentiments]"
  ottoman_aydin_vilayet_centralization_yes:0 "\nCentralization: [?TUR_aydin_centralization|Y0%]"
  ottoman_aydin_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_aydin_centralization|Y0%][ottoman_aydin_vilayet_centralization_value]"
  ottoman_aydin_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_aydin_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_aydin_vc_effect|+%]"
