--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5091,7 +5091,7 @@
  TUR_desert_training_tt:0 "Modify §YOttoman 4th Army§! by\n£attrition_hot_texticon  Heat Attrition: §G-10.00%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\n"
  TUR_increased_garrisons:0 "Increased Garrisons"
  TUR_increased_garrisons_desc:0 "While Syria is an integral inseparable part of our empire, it's far from an ideal province. To avoid getting stabbed in the back, we have to increase local garrisons and keep our backs safe."
- TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
+ TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\n"
  TUR_form_yildirim_army_group:0 "From Yıldırım Army Group"
  TUR_form_yildirim_army_group_desc:0 "Ottoman 4th army command is not sufficient at fulfilling its duties. As military situation at the front worsenes due to this reason, it'd be best to dissolve Ottoman 4th army and establish Yıldırım army goup in its place."
  TUR_form_yildirim_army_group_tt:0 "Modify §YOttoman 4th Army§! by\n£battalion_limit_count_texticon  Batalion Count Limit: §Y+100§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
