--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -714,6 +714,7 @@
  TUR_martial_law:0 "Martial Law"
  TUR_martial_law_desc:0 "This state is currently under martial law. Apart from maintaining public order, the state of martial law also allows us to surpress political enemies and implement laws faster."
  TUR_martial_law_tt:0 "Occupation law §YMartial Law§! can be assigned to state.\n"
+ TUR_mehmed_V:0 "Mehmed V"
 
  TUR_islamic_economics_idea:0 "Halal Economics"
  TUR_islamic_relief_centers_idea:0 "Islamic Relief Centers"
@@ -1100,7 +1101,7 @@
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
  TUR_fatherly_figure:0 "Fatherly Figure"
- TUR_sultan_mehmed_vi:0 "Sultan Mehmed VI"
+ TUR_mehmed_Vi:0 "Sultan Mehmed VI"
  TUR_sultan_abdulmecid_ii:0 "Abdülmecid II"
  tur_placated_administration:0 "Placated Administration"
  loyal_vilayet:0 "Loyal Vilayet"
