--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -683,7 +683,7 @@
  TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
  TUR_armenian_minority_desc:0 "This state is home to many minorities, especially Armenians. As a result, the state suffers from difficulties with defending this territory and increased supply capabilities for the enemy among other things."
  TUR_arab_minority:0 "£ww1_flag_ARB  §YArab Minority§!"
- TUR_arab_minority_desc:0 "This state is home to many minorities, especially Arabs. As a result, the state suffers from supply difficulties and lack of construction capabilities among other things."
+ TUR_arab_minority_desc:0 "This state is home to many minorities, especially Arabs. As a result, the state suffers from supply difficulties among other things."
  TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  §YGreek Minority§!"
  TUR_greek_minority_desc:0 "This state is home to many minorities, especially Greeks. As a result, the state suffers from lack of cooperative property and increased intel for the enemy while increased construction capabilities among other things."
  TUR_jewish_minority:0 "£ww1_flag_ISR  §YJewish Minority§!"
@@ -695,9 +695,9 @@
  TUR_kurdish_minority:0 "£ww1_flag_KUR  §YKurdish Minority§!"
  TUR_kurdish_minority_desc:0 "This state is home to many minorities, especially Kurds. As a result, the state suffers from lack of usable resources and reduced available recruitable manpower among other things."
  TUR_assyrian_minority:0 "£ww1_flag_ASY  §YAssyrian Minority§!"
- TUR_assyrian_minority_desc:0 "":0 "This state is home to many minorities, especially Assyrians. As a result, the state suffers from lack of usable land and construction capabilities among other things."
+ TUR_assyrian_minority_desc:0 "":0 "This state is home to many minorities, especially Assyrians. As a result, the state suffers from lack of usable land among other things."
  TUR_georgian_minority:0 "£ww1_flag_GEO  §YGeorgian Minority§!"
- TUR_georgian_minority_desc:0 "This state is home to many minorities, especially Georgians. As a result, the state suffers from lack of cooperative property and increased supply capabilities for the enemy among other things."
+ TUR_georgian_minority_desc:0 "This state is home to many minorities, especially Georgians. As a result, the state suffers from supply difficulties and division speed among other things."
  TUR_romanian_minority:0 "£ww1_flag_ROM  §YRomanian Minority§!"
  TUR_romanian_minority_desc:0 "This state is home to many minorities, especially Romanians. As a result, the state suffers from increased sabotage of properties and reduced overall opinion among other things."
  TUR_turkish_minority:0 "£ww1_flag_TUR  §YTurkish Minority§!"
