--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3767,7 +3767,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_jerusalem_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_jerusalem_stability_factor|=2%+]"
  ottoman_jerusalem_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_jerusalem_war_support_factor|=2%+]"
  ottoman_jerusalem_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_jerusalem_political_power_factor|=0%+]"
- ottoman_jerusalem_vilayet_454_yes:0 "\n§Y[454.GetName]§!:[TUR_arab_population_454]"
+ ottoman_jerusalem_vilayet_454_yes:0 "\n§Y[454.GetName]§!:[TUR_jewish_population_454][TUR_arab_population_454]"
  ottoman_jerusalem_vilayet_856_yes:0 "\n§Y[856.GetName]§!:[TUR_arab_population_856]"
  ottoman_jerusalem_vilayet_453_yes:0 "\n§Y[453.GetName]§!:[TUR_arab_population_453]"
 
@@ -5240,9 +5240,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_azerbaijani_population_939_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_939_azerbaijani_population_stability_factor|=2%+]"
  TUR_azerbaijani_population_939_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_939_azerbaijani_population_war_support_factor|=2%+]"
  TUR_azerbaijani_population_939_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_939_azerbaijani_population_war_support_factor|=0%+]"
- TUR_autonomy_autonomy_lebanon:0 "\n£sabotaged_resource_texticon §YAutonomous Mutasarrifate§!:\n£stability_texticon  Stability: §G+2.00%§!\n£war_support_modifiericons_texticon  War Support: Stability: §G+2.00%§!"
- TUR_autonomy_autonomy:0 "\n£sabotaged_resource_texticon §YAutonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_factor|=2%+]"
- TUR_autonomy_semi_autonomy:0 "\n£sabotaged_resource_texticon §YSemi-Autonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor|=2%+]"
+ TUR_autonomy_autonomy_lebanon:0 "\n£sabotaged_resource_texticon §YAutonomous Mutasarrifate§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_lebanon_factor_tt|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_lebanon_factor_tt|=2%+]"
+ TUR_autonomy_autonomy:0 "\n£sabotaged_resource_texticon §YAutonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_autonomy_factor_tt|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_autonomy_factor_tt|=2%+]"
+ TUR_autonomy_semi_autonomy:0 "\n£sabotaged_resource_texticon §YSemi-Autonomous Vilayet§!:\n£stability_texticon  Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor_tt|=2%+]\n£war_support_modifiericons_texticon  War Support: Stability: [?ROOT.TUR_ottoman_semi_autonomy_factor_tt|=2%+]"
 
  TRS_arab_uprising_dummy:0 "Arab Uprising"
  TRS_arab_uprising_dummy_desc:0 "Our reforms in Syria have been vastly unpopular. As the opposition grew, it reached a point where it can trigger an all-out rebellion."
