--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -678,7 +678,7 @@
  STATE_677: "Aleppo"
  STATE_678: "Rub al Khali"
  STATE_679: "Mecca"
- STATE_680: "Deir Ez-Zor"
+ STATE_680: "Raqqa"
  STATE_681: "Cape"
  STATE_682: "Northern Ontario"
  STATE_683: "Northeastern Canada"
@@ -1014,11 +1014,14 @@
  STATE_1013: "Asterabad"
  STATE_1014: "Caribbean Netherlands"
  STATE_1015: "Karesi"
- STATE_1016: "Kütahya"
+ STATE_1016: "Eskişehir"
  STATE_1017: "Yozgat"
  STATE_1018: "Çatalca"
  STATE_1019: "İzmit"
  STATE_1020: "Maubegue-Givet"
+ STATE_1021: "Acre"
+ STATE_1022: "Bitlis"
+ STATE_1023: "Deir ez-Zor"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
