better state name and vic point

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -855,7 +855,7 @@
  STATE_854: "Hüdavendigâr"
  STATE_855: "Adjaria"
  STATE_856: "Beersheba"
- STATE_857: "Osmaniye"
+ STATE_857: "Antep"
  STATE_858: "Haifa"
  STATE_859: "Antakya"
  STATE_860: "Gelibolu"
