dobruja migration focus

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5182,6 +5182,10 @@ ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
+ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
+ROM_encourage_romanian_migration_dobruja_desc:0 ""
+ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
+ROM_concessions_to_muslim_romanians_desc:0 ""
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
 ROM_negotiations_for_bukovina_desc:0 ""
 ROM_support_from_germany:0 "Krupp Weapons"
