--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1426,6 +1426,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ROM_kings_country_category:0 "Kings country"
  ROM_kings_country_category_desc:0 "kings approval of government §Y[?kings_approval_of_government]§!"
  ROM_king_appoints_new_government:0 "King Appoints New Government"
+ ROM_encourage_aromanian_migration:0 "Encourage Aromanian Migration"
 
 
  MOL_join_romania:0 "Join Romania"
