--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2833,6 +2833,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_king_disaprove_idea_desc:0 "While a constitutional monarchy with quite strong seperations of power, the constitution does delegate many powers to the king. Romanias king can outright dismiss governments as well as dissolve parliament in times of crisis. While very rarely used, while also holding huge influence over the opinions of Romanias public and politicians. If the king is angered by our government too much, they may support the opposition or even resort to §Rextreme measures§!. In addition, if the king approves of our government, they may use their political clout to help push our agenda."
  ROM_unfinished_land_reform:0 "Unfinished Land Reform"
  ROM_unfinished_land_reform_desc:0 ""
+ ROM_concessions_to_muslim_romanians_idea:0 "Concessions to Muslim Romanians"
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
