--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5006,7 +5006,7 @@ ww1_romania.10.a:0 "Respectfully your majesty, we'd be better without them"
 ww1_romania.10.b:0 "Alright, lets form a coalition government"
 ww1_romania.9.t:0 "Forming a New Government"
 ww1_romania.9.d:0 "With the failure to pass land reform, Prime Minister Brătianu has decided to resign in protest. With the king being tasked to form a new government, its been decided to give the conservative PC party a chance to govern. While being out of power for the last few years, the PC has gone through a dramatic shift. Going from a outright elitist party, the PC has seen the need to change and thus the party has rebranded itself, shifting to the left on a variety of issues including labor rights and the economy. While Carol has appointed the PC to rule, Carol is no tyrant. Thus, elections set to take place in 1911 have been announced."
-no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for our new government. These requests may restrict our ability to do certain actions, but each refusal will §Rlower§! the §CKings§! approval of our government. Once we form a government and the P.C wins the snap elections, we will be able to take domestic focuses."
+no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for our new government. These requests may restrict our ability to do certain actions, but each refusal will §Rlower§! the §CKings§! approval of our government. Once we form a government and the §cP.C§! wins the snap elections, we will be able to take domestic §YFocuses§!."
 ww1_romania.9.a:0 "Lets see how they do!"
 ROM_ferd_king:0 "Ferdinand I is King of Romania"
 ww1_romania.8.t:0 "The Carol Mosque"
