--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1022,7 +1022,7 @@
  STATE_1021: "Acre"
  STATE_1022: "Bitlis"
  STATE_1023: "Deir ez-Zor"
- STATE_1024: "Antep"
+ STATE_1024: "Maraş"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
