--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -158,3 +158,4 @@
  VICTORY_POINTS_11435:0 "Trier"
  VICTORY_POINTS_10412:0 "Lynchburg"
  VICTORY_POINTS_11771:0 "Fengtian"
+ VICTORY_POINTS_6813:0 "Maraş"
