new states fixed

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3403,12 +3403,13 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_ankara_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_ankara_centralization|Y0%][ottoman_ankara_vilayet_centralization_value]"
  ottoman_ankara_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_ankara_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_ankara_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_ankara_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_ankara_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_ankara_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_ankara_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_ankara_vc_effect|+%]"
  ottoman_ankara_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_ankara_vilayet_stability_factor][ottoman_ankara_vilayet_war_support_factor][ottoman_ankara_vilayet_political_power_factor]"
- ottoman_ankara_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_ankara_vilayet_stability_factor][ottoman_ankara_vilayet_war_support_factor][ottoman_ankara_vilayet_political_power_factor][ottoman_ankara_vilayet_49][ottoman_ankara_vilayet_1017]"
+ ottoman_ankara_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_ankara_vilayet_stability_factor][ottoman_ankara_vilayet_war_support_factor][ottoman_ankara_vilayet_political_power_factor][ottoman_ankara_vilayet_49][ottoman_ankara_vilayet_1017][ottoman_ankara_vilayet_348]"
  ottoman_ankara_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_ankara_stability_factor|=2%+]"
  ottoman_ankara_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_ankara_war_support_factor|=2%+]"
  ottoman_ankara_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_ankara_political_power_factor|=0%+]"
  ottoman_ankara_vilayet_49_yes:0 "\n§Y[49.GetName]§!:[TUR_turkish_population_49]"
  ottoman_ankara_vilayet_1017_yes:0 "\n§Y[1017.GetName]§!:[TUR_turkish_population_1017]"
+ ottoman_ankara_vilayet_348_yes:0 "\n§Y[348.GetName]§!:[TUR_armenian_population_348][TUR_greek_population_348][TUR_turkish_population_348]"
 
  TUR_trabzon_vilayet:0 "Trabzon Vilayet"
  TUR_trabzon_vilayet_desc:0 "[TUR_trabzon_vilayet_desc]"
@@ -3433,12 +3434,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_sivas_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_sivas_centralization|Y0%][ottoman_sivas_vilayet_centralization_value]"
  ottoman_sivas_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_sivas_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_sivas_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_sivas_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_sivas_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_sivas_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_sivas_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_sivas_vc_effect|+%]"
  ottoman_sivas_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_sivas_vilayet_stability_factor][ottoman_sivas_vilayet_war_support_factor][ottoman_sivas_vilayet_political_power_factor]"
- ottoman_sivas_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_sivas_vilayet_stability_factor][ottoman_sivas_vilayet_war_support_factor][ottoman_sivas_vilayet_political_power_factor][ottoman_sivas_vilayet_349][ottoman_sivas_vilayet_348]"
+ ottoman_sivas_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_sivas_vilayet_stability_factor][ottoman_sivas_vilayet_war_support_factor][ottoman_sivas_vilayet_political_power_factor][ottoman_sivas_vilayet_349]"
  ottoman_sivas_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_sivas_stability_factor|=2%+]"
  ottoman_sivas_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_sivas_war_support_factor|=2%+]"
  ottoman_sivas_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_sivas_political_power_factor|=0%+]"
  ottoman_sivas_vilayet_349_yes:0 "\n§Y[349.GetName]§!:[TUR_armenian_population_349][TUR_turkish_population_349][TUR_autonomy_349]"
- ottoman_sivas_vilayet_348_yes:0 "\n§Y[348.GetName]§!:[TUR_armenian_population_348][TUR_greek_population_348][TUR_turkish_population_348][TUR_autonomy_348]"
 
  TUR_diyarbakir_vilayet:0 "Diyarbakır Vilayet"
  TUR_diyarbakir_vilayet_desc:0 "[TUR_diyarbakir_vilayet_desc]"
@@ -3669,13 +3669,14 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_aleppo_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_aleppo_centralization|Y0%][ottoman_aleppo_vilayet_centralization_value]"
  ottoman_aleppo_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_aleppo_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_aleppo_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_aleppo_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_aleppo_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_aleppo_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_aleppo_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_aleppo_vc_effect|+%]"
  ottoman_aleppo_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor]"
- ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_857][ottoman_aleppo_vilayet_859]"
+ ottoman_aleppo_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_aleppo_vilayet_stability_factor][ottoman_aleppo_vilayet_war_support_factor][ottoman_aleppo_vilayet_political_power_factor][ottoman_aleppo_vilayet_677][ottoman_aleppo_vilayet_859][ottoman_aleppo_vilayet_857][ottoman_aleppo_vilayet_1024]"
  ottoman_aleppo_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_aleppo_stability_factor|=2%+]"
  ottoman_aleppo_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_aleppo_war_support_factor|=2%+]"
  ottoman_aleppo_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_aleppo_political_power_factor|=0%+]"
  ottoman_aleppo_vilayet_677_yes:0 "\n§Y[677.GetName]§!:[TUR_arab_population_677]"
- ottoman_aleppo_vilayet_857_yes:0 "\n§Y[857.GetName]§!:[TUR_armenian_population_857][TUR_turkish_population_677]"
- ottoman_aleppo_vilayet_859_yes:0 "\n§Y[859.GetName]§!:[TUR_arab_population_859][TUR_turkish_population_677]"
+ ottoman_aleppo_vilayet_859_yes:0 "\n§Y[859.GetName]§!:[TUR_arab_population_859][TUR_turkish_population_859]"
+ ottoman_aleppo_vilayet_857_yes:0 "\n§Y[857.GetName]§!:[TUR_armenian_population_857][TUR_turkish_population_857]"
+ ottoman_aleppo_vilayet_1024_yes:0 "\n§Y[1024.GetName]§!:[TUR_armenian_population_1024][TUR_turkish_population_1024]"
 
  TUR_deir_ez_zor_vilayet:0 "Deir Ez-Zor Vilayet"
  TUR_deir_ez_zor_vilayet_desc:0 "[TUR_deir_ez_zor_vilayet_desc]"
@@ -3685,10 +3686,11 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_deir_ez_zor_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_deir_ez_zor_centralization|Y0%][ottoman_deir_ez_zor_vilayet_centralization_value]"
  ottoman_deir_ez_zor_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_deir_ez_zor_vc_effect|+%]\n£civ_factory_sabotage  Chance to Sabotage Constructions: [?TUR_deir_ez_zor_vc_effect|0-%]\n£political_violence_texticon  Resistance Target: [?TUR_deir_ez_zor_vc_effect_minus|0-%]\n£compliance_gain_texticon  Compliance Growth Speed: [?TUR_deir_ez_zor_vc_effect_2|0+%]\n£political_violence_damage_texticon  Damage to Garrisons: [?TUR_deir_ez_zor_vc_effect|-%]\n£garrison_texticon  Required Garrisons: [?TUR_deir_ez_zor_vc_effect|0-%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_deir_ez_zor_vc_effect|+%]"
  ottoman_deir_ez_zor_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor]"
- ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor][ottoman_deir_ez_zor_vilayet_680][ottoman_deir_ez_zor_vilayet_884]"
+ ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor][ottoman_deir_ez_zor_vilayet_1023][ottoman_deir_ez_zor_vilayet_680][ottoman_deir_ez_zor_vilayet_884]"
  ottoman_deir_ez_zor_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_deir_ez_zor_stability_factor|=2%+]"
  ottoman_deir_ez_zor_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_deir_ez_zor_war_support_factor|=2%+]"
  ottoman_deir_ez_zor_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_deir_ez_zor_political_power_factor|=0%+]"
+ ottoman_deir_ez_zor_vilayet_1023_yes:0 "\n§Y[1023.GetName]§!:[TUR_arab_population_1023]"
  ottoman_deir_ez_zor_vilayet_680_yes:0 "\n§Y[680.GetName]§!:[TUR_arab_population_680][TUR_kurdish_population_680]"
  ottoman_deir_ez_zor_vilayet_884_yes:0 "\n§Y[884.GetName]§!:[TUR_kurdish_population_884][TUR_assyrian_population_884]"
 
@@ -4100,6 +4102,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_armenian_population_349_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_349_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_349_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_349_armenian_population_war_support_factor|=2%+]"
  TUR_armenian_population_349_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_349_armenian_population_war_support_factor|=0%+]"
+ TUR_armenian_population_1024_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_1024_stability_factor][TUR_armenian_population_1024_war_support_factor][TUR_armenian_population_1024_political_power_factor]"
+ TUR_armenian_population_1024_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1024_armenian_population_stability_factor|=2%+]"
+ TUR_armenian_population_1024_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1024_armenian_population_war_support_factor|=2%+]"
+ TUR_armenian_population_1024_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1024_armenian_population_war_support_factor|=0%+]"
  TUR_armenian_population_350_yes:0 "\n£ww1_flag_ARM  §YArmenian Minority§![TUR_armenian_population_350_stability_factor][TUR_armenian_population_350_war_support_factor][TUR_armenian_population_350_political_power_factor]"
  TUR_armenian_population_350_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_350_armenian_population_stability_factor|=2%+]"
  TUR_armenian_population_350_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_350_armenian_population_war_support_factor|=2%+]"
@@ -4448,6 +4454,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_arab_population_680_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_680_arab_population_stability_factor|=2%+]"
  TUR_arab_population_680_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_680_arab_population_war_support_factor|=2%+]"
  TUR_arab_population_680_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_680_arab_population_war_support_factor|=0%+]"
+ TUR_arab_population_1023_yes:0 "\n£ww1_flag_ARB  §YArab Minority§![TUR_arab_population_1023_stability_factor][TUR_arab_population_1023_war_support_factor][TUR_arab_population_1023_political_power_factor]"
+ TUR_arab_population_1023_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_1023_arab_population_stability_factor|=2%+]"
+ TUR_arab_population_1023_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_1023_arab_population_war_support_factor|=2%+]"
+ TUR_arab_population_1023_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_1023_arab_population_war_support_factor|=0%+]"
  TUR_arab_population_747_yes:0 "\n£ww1_flag_ARB  §YArab Minority§![TUR_arab_population_747_stability_factor][TUR_arab_population_747_war_support_factor][TUR_arab_population_747_political_power_factor]"
  TUR_arab_population_747_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_747_arab_population_stability_factor|=2%+]"
  TUR_arab_population_747_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_747_arab_population_war_support_factor|=2%+]"
@@ -5064,6 +5074,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_turkish_population_349_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_349_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_349_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_349_turkish_population_war_support_factor|=2%+]"
  TUR_turkish_population_349_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_349_turkish_population_war_support_factor|=0%+]"
+ TUR_turkish_population_1024_yes:0 "\n£ww1_flag_ARM  §Yturkish Minority§![TUR_turkish_population_1024_stability_factor][TUR_turkish_population_1024_war_support_factor][TUR_turkish_population_1024_political_power_factor]"
+ TUR_turkish_population_1024_stability_factor_yes:0 "\n£stability_texticon  Stability: [?ROOT.TUR_1024_turkish_population_stability_factor|=2%+]"
+ TUR_turkish_population_1024_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?ROOT.TUR_1024_turkish_population_war_support_factor|=2%+]"
+ TUR_turkish_population_1024_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?ROOT.TUR_1024_turkish_population_war_support_factor|=0%+]"
  TUR_turkish_population_353_yes:0 "\n£ww1_flag_TUR  §YTurkish Minority§![TUR_turkish_population_353_stability_factor][TUR_turkish_population_353_war_support_factor][TUR_turkish_population_353_political_power_factor]"
  TUR_turkish_population_353_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_353_turkish_population_stability_factor|=2%+]"
  TUR_turkish_population_353_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_353_turkish_population_war_support_factor|=2%+]"
@@ -5498,6 +5512,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_clash_against_armenian_gangs_tt:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
  TUR_clash_against_armenian_gangs_tt2:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
  TUR_increase_adana_centralization_1:0 "Modify §YCentralization§! of §YAdana Vilayet§! by §G+1%§!\n"
+ TUR_increase_ankara_centralization_1:0 "Modify §YCentralization§! of §YAnkara Vilayet§! by §G+1%§!\n"
  TUR_increase_aleppo_centralization_1:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+1%§!\n"
  TUR_increase_sivas_centralization_1:0 "Modify §YCentralization§! of §YSivas Vilayet§! by §G+1%§!\n"
  TUR_increase_mamuret_ul_aziz_centralization_1:0 "Modify §YCentralization§! of §YMamuret-ul-Aziz Vilayet§! by §G+1%§!\n"
